<resources>
    <string name="app_name">reddit</string>
    <string name="text_retry">Retry</string>
    <string name="text_score_desc">Score Image</string>
    <string name="text_comment_desc">Comment Image</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="reddits_image">Reddits image</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>

    <string name="data">Home</string>
    <string name="play_icon">play Icon</string>
    <string name="reddit_Title_Transition">redditTitleTransition</string>
    <string name="empty_reddit">Empty reddit</string>
    <string name="you_don_t_hve_any_favourite_post">You don\'t have any favourite post</string>
    <string name="add_new_post_from_detail_page">Add new post from detail page</string>
    <string name="delete_all_post">Deleted all posts</string>
    <string name="post_success_message">Reddit Post added to favourite successfully!!</string>
    <string name="delete_message">"Post deleted successfully"</string>
    <string name="add_post_to_favourite">Add post to favourite</string>
    <string name="delete_single_post_button">delete single post button</string>
    <string name="ooops_can_t_load_data_due_to_connection_issue_n_please_click_the_retry_button_to_reload">Ooops!! Can\'t load data due to connection issue\n Please click the retry button to reload</string>
</resources>